# turntune

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: metrics.md
examples/: custom_detector.py
src/turntune/: __init__.py  __main__.py  audio.py  cache.py  cli.py  config.py  harness.py  metrics.py  policy.py  sweep.py  types.py
src/turntune/data/: _generate.py
src/turntune/data/fixtures/: labels.json
src/turntune/detectors/: __init__.py  base.py  registry.py  semantic.py  silero_vad.py
src/turntune/scenarios/: __init__.py  base.py  eot_bench.py  fixtures.py  registry.py
src/turntune/server/: __init__.py  app.py
src/turntune/server/static/: app.js  index.html  styles.css
tests/: conftest.py  test_harness.py  test_loader.py  test_metrics.py  test_semantic_adapter.py  test_silero_adapter.py
